crates/monochange_npm/src/__tests__/snapshots/monochange_npm__analysis__tests__typescript_analysis_invalid.snap
---
source: crates/monochange_npm/src/__tests__/analysis_tests.rs
expression: "serde_json::json!({\n    \"analyzerId\": result.analyzer_id, \"changes\": changes, \"warnings\":\n    result.warnings,\n})"
---
{
  "analyzerId": "npm/package-json",
  "changes": [
    {
      "assessment": {
        "confidence": "low",
        "evidence": {
          "analyzer_id": "npm/typescript",
          "completeness": "partial",
          "coverage": "syntax fallback; TypeScript declaration compatibility was not completed",
          "engine": "typescript",
          "fallback_reason": "after: TS5083: Cannot read file 'virtual/missing-config.json'.",
          "version": "6.0.3"
        },
        "outcome": "inconclusive",
        "suggested_bump": "patch"
      },
      "category": "public_api",
      "filePath": "package.json",
      "itemKind": "declaration_analysis",
      "itemPath": "typescript",
      "kind": "modified",
      "summary": "TypeScript declaration compatibility is inconclusive"
    }
  ],
  "warnings": [
    "after: TS5083: Cannot read file 'virtual/missing-config.json'."
  ]
}
