crates/monochange_npm/src/__tests__/snapshots/monochange_npm__analysis__tests__typescript_analysis_wildcard.snap
---
source: crates/monochange_npm/src/__tests__/analysis_tests.rs
expression: "serde_json::json!({\n    \"analyzerId\": result.analyzer_id, \"changes\": changes, \"warnings\":\n    result.warnings,\n})"
---
{
  "analyzerId": "npm/package-json",
  "changes": [
    {
      "assessment": {
        "confidence": "low",
        "evidence": {
          "analyzer_id": "npm/typescript",
          "completeness": "partial",
          "coverage": "some typed entrypoints or inputs were not fully checked against isolated snapshots",
          "engine": "typescript",
          "fallback_reason": "before: wildcard export ./features/* could not be enumerated conclusively; after: wildcard export ./features/* could not be enumerated conclusively",
          "version": "6.0.3"
        },
        "outcome": "inconclusive",
        "suggested_bump": "patch"
      },
      "category": "public_api",
      "filePath": "package.json",
      "itemKind": "declaration_analysis",
      "itemPath": "@fixture/wildcard",
      "kind": "modified",
      "summary": "TypeScript declaration compatibility is inconclusive for `@fixture/wildcard`"
    },
    {
      "assessment": {
        "confidence": "high",
        "evidence": {
          "analyzer_id": "npm/typescript",
          "completeness": "complete",
          "coverage": "all explicit typed entrypoints emitted and compared",
          "engine": "typescript",
          "version": "6.0.3"
        },
        "outcome": "compatible",
        "suggested_bump": "none"
      },
      "category": "public_api",
      "filePath": "package.json",
      "itemKind": "declaration_surface",
      "itemPath": "@fixture/wildcard",
      "kind": "modified",
      "summary": "source changes preserve the emitted TypeScript declaration surface"
    }
  ],
  "warnings": [
    "after: wildcard export ./features/* could not be enumerated conclusively",
    "before: wildcard export ./features/* could not be enumerated conclusively"
  ]
}
