crates/monochange_npm/src/__tests__/snapshots/monochange_npm__analysis__tests__typescript_analysis_wildcard_signatures.snap
---
source: crates/monochange_npm/src/__tests__/analysis_tests.rs
expression: "if signatures.is_empty() { \"[no changed signatures]\" } else { &signatures }"
---
[no changed signatures]
